# slipway_registry

./: .env  Cargo.toml  Dockerfile  README.md  alloy.river  deploy-secrets.sh  fly.toml  justfile  start.sh
src/: components.rs  main.rs  metrics.rs
